syntax = "proto3";
package veranablockchain.trustdeposit;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "veranablockchain/trustdeposit/params.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustdeposit/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc ReclaimTrustDepositInterests(MsgReclaimTrustDepositInterests) returns (MsgReclaimTrustDepositInterestsResponse);
  rpc ReclaimTrustDeposit(MsgReclaimTrustDeposit) returns (MsgReclaimTrustDepositResponse);
//  rpc SlashTrustDeposit(MsgSlashTrustDeposit) returns (MsgSlashTrustDepositResponse);
  rpc RepaySlashedTrustDeposit(MsgRepaySlashedTrustDeposit) returns (MsgRepaySlashedTrustDepositResponse);
  //rpc SlashTrustDepositProposal(MsgSlashTrustDepositProposal) returns (MsgSlashTrustDepositProposalResponse);

}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "veranablockchain/x/trustdeposit/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgReclaimTrustDepositInterests defines the request type
message MsgReclaimTrustDepositInterests {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgReclaimTrustDepositInterestsResponse defines the response type
message MsgReclaimTrustDepositInterestsResponse {
  uint64 claimed_amount = 1;
}

message MsgReclaimTrustDeposit {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 claimed = 2;  // Amount to reclaim in denom
}

message MsgReclaimTrustDepositResponse {
  uint64 burned_amount = 1;     // Amount burned
  uint64 claimed_amount = 2;    // Amount transferred to account
}

//message MsgSlashTrustDepositProposal {
//  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
//  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
//  string account = 3 [(gogoproto.moretags) = "yaml:\"account\""];
//  string amount = 4 [
//    (gogoproto.customtype) = "cosmossdk.io/math.Int",
//    (gogoproto.nullable) = false,
//    (gogoproto.moretags) = "yaml:\"amount\""
//  ];
//}
//
//message MsgSlashTrustDepositProposalResponse {}


message MsgRepaySlashedTrustDeposit {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string account = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 amount = 3;
}

message MsgRepaySlashedTrustDepositResponse {}
